# google-i18n-address

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: code_quality.yml  publish.yml  python-package.yml
countries_validation_data/: ac.json  ad.json  ae.json  af.json  ai.json  all.json  am.json  bb.json  bd.json  be.json  bg.json  bh.json  bj.json  bl.json  bm.json  bo.json  bt.json  cc.json  cd.json  ch.json  cn.json  co.json  cv.json  cx.json  dk.json  dz.json  ee.json  eh.json  es.json  et.json  fk.json  fm.json  fo.json  fr.json  gn.json  gu.json  gw.json  ht.json  hu.json  il.json  (+62 more)
i18naddress/: __init__.py  countries.py  downloader.py  test_downloader.py  test_i18naddress.py
i18naddress/data/: ac.json  ae.json  af.json  ag.json  ai.json  al.json  all.json  am.json  ar.json  as.json  at.json  au.json  ax.json  az.json  ba.json  bb.json  bn.json  br.json  bs.json  bt.json  by.json  ca.json  ch.json  cl.json  cn.json  cr.json  cu.json  cv.json  cy.json  cz.json  de.json  do.json  ec.json  ee.json  eg.json  es.json  fi.json  fk.json  fr.json  gb.json  (+103 more)
tests/: conftest.py  test_downloader.py  test_i18naddress.py  test_normalization.py  test_scripts.py  test_validate_areas.py
